# deepracin

./: CMakeLists.txt  Makefile  README.md  deepRACIN.pro  deepracin.files  deepracin.includes  deepracin.py  formatREADME
Kernels/: dR_conv2d.cl  dR_conv2d1x1.cl  dR_fcl.cl  dR_fft.cl  dR_helper.cl  dR_lrn.cl  dR_math.cl  dR_pooling.cl  dR_transform.cl  dR_winograd2.cl  dR_winograd2alt.cl
cmake/modules/: FindOpenCL.cmake  FindOpenCV.cmake
examples/: CMakeLists.txt
examples/comparison/: build_dr_model.py  featuresFFT.py  featuresWVT.py  measureRunTime.sh  variables.npy
examples/features20/: DT.py  featuresFFT.py  featuresWVT.py  getFeatures.py  soll.txt
examples/features20/DecisionTreeFiles/: DT_ISAS.csv  generateDT.py
examples/features20/genInd/: genIndsradAuto.txt  genIndsradRunTime.txt  generateSpec.py  sang_loop_gen.py
examples/features20/generateIndices/: generateSpec.py
examples/features20/training/: sftp.txt  sortTestset.py  zeroPad.py
examples/features20/trainingValuesScript/: negFeatures.txt  negFeatures32.txt  posFeatures.txt  posFeatures32.txt  testFeaturesneg.txt  testFeaturesneg32.txt  testFeaturespos.txt  testFeaturespos32.txt  trainDTsk.py  trainingValues.sh
examples/ffttest/: fft_grayscale.py  fftabs_grayscale.py  ffttest.py  ffttest_gray.py  runtimes.ods  testruns_output.txt
examples/ffttest/model/: concat_3in0_7_224_224_224  concat_3in0_8_224_224_224  concat_3in2_7_1_1_1
examples/ffttest/model/dr_graph_export/: graph.dr
examples/freqfeattest/: freqFeat.m
examples/specxturetest/: specxture.m  specxture_sang_test_output64x64.txt  specxture_srad_test_output64x64.txt  specxturetest_grayscale.py
examples/squeezenet-v1.1/: squeezenet.py  squeezenet_deployed.c  squeezenet_deployed.cpp
examples/squeezenet-v1.1/squeezenet_whole/: 0.var  12.var  18.var  24.var  30.var  36.var  42.var  48.var  6.var  Pool14x14_46_nocopyAverage  Pool2x2_9_nocopyAverage  Pool3x3_10_nocopyMax  Pool3x3_19_nocopyMax  Pool3x3_28_nocopyMax  concat_2in2_128_128  concat_2in2_192_192  concat_2in2_256_256  concat_2in2_64_64  concat_3in2_1_1_1  graph.dr
examples/vgg16/: vgg16_full.py  vgg16_load_dr_model.py  vgg_deployed.c  vgg_deployed.cpp
examples/wavelettest/: fwt_test.py  testSample.txt
include/: dR_base.h  dR_clwrap.h  dR_core.h  dR_nodes_bn.h  dR_nodes_conv2d.h  dR_nodes_fc.h  dR_nodes_fft.h  dR_nodes_filter.h  dR_nodes_haarwt.h  dR_nodes_math.h  dR_nodes_misc.h  dR_nodes_pooling.h  dR_nodes_specxture.h  dR_nodes_transform.h  dR_parser.h  dR_types.h  deepRACIN.h
python/: CMakeLists.txt  setup.py.in
python/deepracin/: __init__.py  __init__.py.in
src/: dR_clwrap.c  dR_core.c  dR_nodes_bn.c  dR_nodes_conv2d.c  dR_nodes_fc.c  dR_nodes_fft.c  dR_nodes_filter.c  dR_nodes_haarwt.c  dR_nodes_math.c  dR_nodes_misc.c  dR_nodes_pooling.c  dR_nodes_specxture.c  dR_nodes_transform.c  dR_parser.c  deepRACIN.c
